Fix quote styles in the gutenberg admin; make sure floated elements in tabs don't overflow the tab

--- a/src/sass/_gutenberg.scss
+++ b/src/sass/_gutenberg.scss
@@ -232,12 +232,24 @@ textarea {
 
     textarea {
       font: inherit;
+			text-align: center;
     }
 
-    cite textarea {
-      position: relative;
-      top: .375rem;
-    }
+		cite {
+
+			left: 0 !important;
+			margin-top: 0 !important;
+
+			&:before {
+				display: none !important;
+			}
+
+	    textarea {
+	      position: relative;
+	      top: .375rem;
+	    }
+
+		}
 
     .cl-quote-image img {
       border-radius: 50%;
